==> mbed-ce/mbed-os/targets/TARGET_NXP/TARGET_LPC17XX/spi_api.c <==
#include "mbed_assert.h"
#include <math.h>
#include "spi_api.h"
#include "cmsis.h"
#include "PeripheralPinMaps.h"
#include "mbed_error.h"

void spi_init(spi_t *obj, PinName mosi, PinName miso, PinName sclk, PinName ssel) {
    spi_pinmap_t pinmap;
    pinmap.mosi_pin = mosi;
    pinmap.miso_pin = miso;
    pinmap.sclk_pin = sclk;
    pinmap.ssel_pin = ssel;

    // determine the SPI to use
    SPIName spi_mosi_miso_sclk_periph = spi_get_peripheral_name(mosi, miso, sclk);
    SPIName spi_ssel_periph = (SPIName)pinmap_peripheral(ssel, PinMap_SPI_SSEL);
    pinmap.peripheral = pinmap_merge(spi_mosi_miso_sclk_periph, spi_ssel_periph);
    MBED_ASSERT(pinmap.peripheral != NC);

    // Get pin functions
    pinmap.mosi_function = pinmap_find_function(mosi, PinMap_SPI_MOSI);
    pinmap.miso_function = pinmap_find_function(miso, PinMap_SPI_MISO);
    pinmap.sclk_function = pinmap_find_function(sclk, PinMap_SPI_SCLK);
    pinmap.ssel_function = pinmap_find_function(ssel, PinMap_SPI_SSEL);

    spi_init_direct(obj, &pinmap);
}

void spi_free(spi_t *obj)
{
    // Reset all pins to GPIO function
    if(obj->mosi_pin != NC) pin_function(obj->mosi_pin, 0);
    if(obj->miso_pin != NC) pin_function(obj->miso_pin, 0);
    pin_function(obj->sclk_pin, 0);
    if(obj->ssel_pin != NC) pin_function(obj->ssel_pin, 0);
}

void spi_format(spi_t *obj, int bits, int mode, int slave) {
    ssp_disable(obj);
    MBED_ASSERT(((bits >= 4) && (bits <= 16)) && (mode >= 0 && mode <= 3));
    
    obj->bits_per_word = bits;
    int polarity = (mode & 0x2) ? 1 : 0;
    int phase = (mode & 0x1) ? 1 : 0;
    
    // set it up
    int DSS = bits - 1;            // DSS (data select size)
    int SPO = (polarity) ? 1 : 0;  // SPO - clock out polarity
    int SPH = (phase) ? 1 : 0;     // SPH - clock out phase
    
    int FRF = 0;                   // FRF (frame format) = SPI
    uint32_t tmp = obj->spi->CR0;
    tmp &= ~(0x00FF);              // Clear DSS, FRF, CPOL and CPHA [7:0]
    tmp |= DSS << 0
        | FRF << 4
        | SPO << 6
        | SPH << 7;
    obj->spi->CR0 = tmp;
    
    tmp = obj->spi->CR1;
    tmp &= ~(0xD);
    tmp |= 0 << 0                   // LBM - loop back mode - off
        | ((slave) ? 1 : 0) << 2   // MS - master slave mode, 1 = slave
        | 0 << 3;                  // SOD - slave output disable - na
    obj->spi->CR1 = tmp;
    
    ssp_enable(obj);
}

void spi_frequency(spi_t *obj, int hz) {
    ssp_disable(obj);
    
    // setup the spi clock diveder to /1
    switch ((int)obj->spi) {
        case SPI_0:
            LPC_SC->PCLKSEL1 &= ~(3 << 10);
            LPC_SC->PCLKSEL1 |=  (1 << 10);
            break;
        case SPI_1:
            LPC_SC->PCLKSEL0 &= ~(3 << 20);
            LPC_SC->PCLKSEL0 |=  (1 << 20);
            break;
    }
    
    uint32_t PCLK = SystemCoreClock;
    
    int prescaler;
    
    for (prescaler = 2; prescaler <= 254; prescaler += 2) {
        int prescale_hz = PCLK / prescaler;
        
        // calculate the divider
        int divider = floor(((float)prescale_hz / (float)hz) + 0.5f);
        
        // check we can support the divider
        if (divider < 256) {
            // prescaler
            obj->spi->CPSR = prescaler;
            
            // divider
            obj->spi->CR0 &= ~(0xFF00);  // Clear SCR: Serial clock rate [15:8]
            obj->spi->CR0 |= (divider - 1) << 8;
            ssp_enable(obj);
            return;
        }
    }
    error("Couldn't setup requested SPI frequency");
}

int spi_master_write(spi_t *obj, int value) {
    ssp_write(obj, value);
    return ssp_read(obj);
}
